Naprawienie linków powrotu - zmiana z Strona.html na index.html

--- a/podstrona1.html
+++ b/podstrona1.html
@@ -50,7 +50,7 @@
                 <h3>Historia i Znaczenie</h3>
                 <p>Przejścia i transformacje zostały wprowadzone w CSS 3 i zrewolucjonizowały sposób tworzenia efektów bez JavaScriptu. Wcześniej, aby uzyskać dynamiczne efekty, trzeba było użyć Flash lub JavaScript. Dziś są to standardowe narzędzia każdego web designera, obsługiwane przez wszystkie nowoczesne przeglądarki.</p>
 
-                <a class="back-button" href="Strona.html">
+                <a class="back-button" href="index.html">
                     ← Powrót do strony głównej
                 </a>
             </section>
