--- a/podstrona2.html
+++ b/podstrona2.html
@@ -52,7 +52,7 @@
                 <h3>Historia i Ewolucja</h3>
                 <p>Animacje CSS3 pojawiły się oko 2012 roku i niezależnie były implementowane przez różne przeglądarki. Dziś stanowią fundamentalny element nowoczesnego web designu, umożliwiając tworzenie złożonych efektów bez JavaScript. Zaawansowane animacje mogą również być uruchamiane CSS Media Queries, co pozwala na responywne efekty dostosowujące się do wielkości ekranu.</p>
 
-                <a class="back-button" href="Strona.html">
+                <a class="back-button" href="index.html">
                     ← Powrót do strony głównej
                 </a>
             </section>
