--- a/index.html
+++ b/index.html
@@ -22,6 +22,47 @@
             </nav>
 
             <section class="content">
+                <h2>Publikacja Strony Internetowej</h2>
+                
+                <h3>Serwis GitHub Pages</h3>
+                <p>Ta strona internetowa jest hostowana na <strong>GitHub Pages</strong> - bezp³atnej us³udze oferowanej przez GitHub do publikacji stron internetowych bezpoœrednio z repozytorium.</p>
+
+                <h3>Opis Serwisu GitHub</h3>
+                <p>GitHub to platforma do kontroli wersji i wspó³pracy nad projektami. Umo¿liwia:
+                <ul>
+                    <li><strong>Przechowywanie kodu</strong> - bezpieczne repozytoria dla projektów</li>
+                    <li><strong>Kontrolê wersji</strong> - œledzenie zmian w kodzie z GIT</li>
+                    <li><strong>Wspó³pracê zespo³ow¹</strong> - praca wielu osób nad tym samym projektem</li>
+                    <li><strong>Hosting stron</strong> - publikacja stron HTML/CSS/JS poprzez GitHub Pages</li>
+                    <li><strong>Community</strong> - spo³ecznoœæ deweloperów i open source</li>
+                </ul>
+                </p>
+
+                <h3>Warunki U¿ywania Strony</h3>
+                <p>Poprzez korzystanie z tej strony, oœwiadczasz, ¿e:
+                <ul>
+                    <li>Akceptujesz wszystkie materia³y i zawartoœæ, które s¹ tu prezentowane</li>
+                    <li>U¿ywasz tej strony wy³¹cznie do celów edukacyjnych i osobistych</li>
+                    <li>Nie bêdziesz kopiowaæ ani rozpowszechniaæ zawartoœci bez pozwolenia</li>
+                    <li>Rozumiesz, ¿e zawartoœæ jest dostarczana "w stanie obecnym" bez ¿adnych gwarancji</li>
+                    <li>Ca³¹ odpowiedzialnoœæ za u¿ytkowanie tej strony ponoszysz sam</li>
+                    <li>Strona jest dostêpna dla celów edukacyjnych i demonstracyjnych</li>
+                </ul>
+                </p>
+
+                <h3>Dlaczego Wybraliœmy GitHub</h3>
+                <p>GitHub zosta³ wybrany jako platforma hostingowa dla tej strony z nastêpuj¹cych powodów:
+                <ul>
+                    <li><strong>Bezp³atny hosting</strong> - GitHub Pages oferuje darmowy hosting dla stron statycznych</li>
+                    <li><strong>Integracja z kodem</strong> - kod strony i hosting w jednym miejscu</li>
+                    <li><strong>Kontrola wersji</strong> - ka¿da zmiana jest œledzona i mo¿na powróciæ do wczeœniejszych wersji</li>
+                    <li><strong>£atwoœæ wdra¿ania</strong> - proste pushowanie zmian bezpoœrednio na serwer</li>
+                    <li><strong>Bezpieczeñstwo</strong> - GitHub zapewnia bezpieczne przechowywanie danych</li>
+                    <li><strong>Skalabilnoœæ</strong> - strona automatycznie skaluje siê wraz ze wzrostem ruchu</li>
+                    <li><strong>Dokumentacja</strong> - obszerny dokument i wsparcie spo³ecznoœci</li>
+                </ul>
+                </p>
+
                 <h2>Efekty Wizualne w CSS</h2>
                 <p>Efekty wizualne sÄ… nieodÅ‚Ä…cznÄ… czÄ™Å›ciÄ… nowoczesnego designu web. PozwalajÄ… na tworzenie bardziej interaktywnych i angaÅ¼ujÄ…cych doÅ›wiadczeÅ„ dla uÅ¼ytkownikÃ³w.</p>
                 
@@ -61,3 +102,5 @@
 
 </body>
 </html>
+
+
