Naprawiono kodowanie znakow UTF-8

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -25,41 +25,41 @@
                 <h2>Publikacja Strony Internetowej</h2>
                 
                 <h3>Serwis GitHub Pages</h3>
-                <p>Ta strona internetowa jest hostowana na <strong>GitHub Pages</strong> - bezp³atnej us³udze oferowanej przez GitHub do publikacji stron internetowych bezpoœrednio z repozytorium.</p>
+                <p>Ta strona internetowa jest hostowana na <strong>GitHub Pages</strong> - bezpï¿½atnej usï¿½udze oferowanej przez GitHub do publikacji stron internetowych bezpoï¿½rednio z repozytorium.</p>
 
                 <h3>Opis Serwisu GitHub</h3>
-                <p>GitHub to platforma do kontroli wersji i wspó³pracy nad projektami. Umo¿liwia:
+                <p>GitHub to platforma do kontroli wersji i wspï¿½pracy nad projektami. Umoï¿½liwia:
                 <ul>
-                    <li><strong>Przechowywanie kodu</strong> - bezpieczne repozytoria dla projektów</li>
-                    <li><strong>Kontrolê wersji</strong> - œledzenie zmian w kodzie z GIT</li>
-                    <li><strong>Wspó³pracê zespo³ow¹</strong> - praca wielu osób nad tym samym projektem</li>
+                    <li><strong>Przechowywanie kodu</strong> - bezpieczne repozytoria dla projektï¿½w</li>
+                    <li><strong>Kontrolï¿½ wersji</strong> - ï¿½ledzenie zmian w kodzie z GIT</li>
+                    <li><strong>Wspï¿½pracï¿½ zespoï¿½owï¿½</strong> - praca wielu osï¿½b nad tym samym projektem</li>
                     <li><strong>Hosting stron</strong> - publikacja stron HTML/CSS/JS poprzez GitHub Pages</li>
-                    <li><strong>Community</strong> - spo³ecznoœæ deweloperów i open source</li>
+                    <li><strong>Community</strong> - spoï¿½ecznoï¿½ï¿½ deweloperï¿½w i open source</li>
                 </ul>
                 </p>
 
-                <h3>Warunki U¿ywania Strony</h3>
-                <p>Poprzez korzystanie z tej strony, oœwiadczasz, ¿e:
+                <h3>Warunki Uï¿½ywania Strony</h3>
+                <p>Poprzez korzystanie z tej strony, oï¿½wiadczasz, ï¿½e:
                 <ul>
-                    <li>Akceptujesz wszystkie materia³y i zawartoœæ, które s¹ tu prezentowane</li>
-                    <li>U¿ywasz tej strony wy³¹cznie do celów edukacyjnych i osobistych</li>
-                    <li>Nie bêdziesz kopiowaæ ani rozpowszechniaæ zawartoœci bez pozwolenia</li>
-                    <li>Rozumiesz, ¿e zawartoœæ jest dostarczana "w stanie obecnym" bez ¿adnych gwarancji</li>
-                    <li>Ca³¹ odpowiedzialnoœæ za u¿ytkowanie tej strony ponoszysz sam</li>
-                    <li>Strona jest dostêpna dla celów edukacyjnych i demonstracyjnych</li>
+                    <li>Akceptujesz wszystkie materiaï¿½y i zawartoï¿½ï¿½, ktï¿½re sï¿½ tu prezentowane</li>
+                    <li>Uï¿½ywasz tej strony wyï¿½ï¿½cznie do celï¿½w edukacyjnych i osobistych</li>
+                    <li>Nie bï¿½dziesz kopiowaï¿½ ani rozpowszechniaï¿½ zawartoï¿½ci bez pozwolenia</li>
+                    <li>Rozumiesz, ï¿½e zawartoï¿½ï¿½ jest dostarczana "w stanie obecnym" bez ï¿½adnych gwarancji</li>
+                    <li>Caï¿½ï¿½ odpowiedzialnoï¿½ï¿½ za uï¿½ytkowanie tej strony ponoszysz sam</li>
+                    <li>Strona jest dostï¿½pna dla celï¿½w edukacyjnych i demonstracyjnych</li>
                 </ul>
                 </p>
 
-                <h3>Dlaczego Wybraliœmy GitHub</h3>
-                <p>GitHub zosta³ wybrany jako platforma hostingowa dla tej strony z nastêpuj¹cych powodów:
+                <h3>Dlaczego Wybraliï¿½my GitHub</h3>
+                <p>GitHub zostaï¿½ wybrany jako platforma hostingowa dla tej strony z nastï¿½pujï¿½cych powodï¿½w:
                 <ul>
-                    <li><strong>Bezp³atny hosting</strong> - GitHub Pages oferuje darmowy hosting dla stron statycznych</li>
+                    <li><strong>Bezpï¿½atny hosting</strong> - GitHub Pages oferuje darmowy hosting dla stron statycznych</li>
                     <li><strong>Integracja z kodem</strong> - kod strony i hosting w jednym miejscu</li>
-                    <li><strong>Kontrola wersji</strong> - ka¿da zmiana jest œledzona i mo¿na powróciæ do wczeœniejszych wersji</li>
-                    <li><strong>£atwoœæ wdra¿ania</strong> - proste pushowanie zmian bezpoœrednio na serwer</li>
-                    <li><strong>Bezpieczeñstwo</strong> - GitHub zapewnia bezpieczne przechowywanie danych</li>
-                    <li><strong>Skalabilnoœæ</strong> - strona automatycznie skaluje siê wraz ze wzrostem ruchu</li>
-                    <li><strong>Dokumentacja</strong> - obszerny dokument i wsparcie spo³ecznoœci</li>
+                    <li><strong>Kontrola wersji</strong> - kaï¿½da zmiana jest ï¿½ledzona i moï¿½na powrï¿½ciï¿½ do wczeï¿½niejszych wersji</li>
+                    <li><strong>ï¿½atwoï¿½ï¿½ wdraï¿½ania</strong> - proste pushowanie zmian bezpoï¿½rednio na serwer</li>
+                    <li><strong>Bezpieczeï¿½stwo</strong> - GitHub zapewnia bezpieczne przechowywanie danych</li>
+                    <li><strong>Skalabilnoï¿½ï¿½</strong> - strona automatycznie skaluje siï¿½ wraz ze wzrostem ruchu</li>
+                    <li><strong>Dokumentacja</strong> - obszerny dokument i wsparcie spoï¿½ecznoï¿½ci</li>
                 </ul>
                 </p>
 
