Zmieniono tekst: 'Dlaczego Wybralismy' na 'Dlaczego Ja Wybralem'

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 </ul>
                 </p>
 
-                <h3>Dlaczego Wybraliśmy GitHub</h3>
-                <p>GitHub został wybrany jako platforma hostingowa dla tej strony z następujących powodów:
+                <h3>Dlaczego Ja Wybrałem GitHub</h3>
+                <p>Wybrałem GitHub dla tej strony z następujących powodów:
                 <ul>
                     <li><strong>Bezpłatny hosting</strong> - GitHub Pages oferuje darmowy hosting dla stron statycznych</li>
                     <li><strong>Integracja z kodem</strong> - kod strony i hosting w jednym miejscu</li>
